<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.buffalo.controlefinancas.ui.register.RegisterExpensesActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:animateLayoutChanges="true"
        tools:ignore="MissingDefaultResource">

        <RelativeLayout
            android:id="@+id/coordinator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            tools:ignore="PrivateResource">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bgk_main_activity"
                android:scaleType="centerCrop"/>

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/main_appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:elevation="0dp"
                android:background="@color/transparent"
                style="@style/AppTheme.PopupOverlay"
                app:layout_behavior="@string/FixAppBarLayoutBehavior">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/main_toolbar"
                    style="@style/ToolbarStyle"
                    android:theme="@style/ToolbarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    app:contentInsetLeft="0dp"
                    app:contentInsetStart="0dp"
                    android:elevation="0dp"
                    app:title="REGISTRAR  DESPESA"
                    app:titleTextColor="@color/white"
                    app:titleMarginStart="15dp"
                    app:layout_collapseMode="pin">

                </com.google.android.material.appbar.MaterialToolbar>

            </com.google.android.material.appbar.AppBarLayout>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/main_appbar"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardMaxElevation="12dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="20dp"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_imput_expense_type"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edit_text_expense_type"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:focusableInTouchMode="false"
                                android:hint="@string/prompt_expense_type"
                                android:imeOptions="actionNext"
                                android:inputType="textPersonName|textCapWords" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_liter"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edit_text_description"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_description"
                                android:imeOptions="actionNext"
                                android:inputType="textCapSentences" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edit_text_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_value"
                                android:imeOptions="actionNext"
                                android:text="@string/prompt_zero_real" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_imput_liter"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:visibility="gone"
                            tools:visibility="visible" >

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edit_text_liter"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_liter"
                                android:imeOptions="actionNext"
                                android:inputType="number"
                                android:text="@string/prompt_liter_zero"/>

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edit_text_date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:focusableInTouchMode="false"
                                android:hint="@string/prompt_date"
                                android:imeOptions="actionNext"
                                android:inputType="number" />

                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_note_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edit_text_note_number"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_note_number"
                                android:imeOptions="actionNext"
                                android:inputType="text" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edit_text_states"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_state"
                                android:focusableInTouchMode="false"
                                android:imeOptions="actionNext"
                                android:inputType="textPersonName|textCapWords" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edit_text_cities"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_city"
                                android:focusableInTouchMode="false"
                                android:imeOptions="actionNext"
                                android:inputType="textPersonName|textCapWords" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:elevation="40dp"
                android:textColor="@color/white"

                android:backgroundTint="@color/colorSecondaryVariant"
                android:text="Salvar Despesas" />

        </RelativeLayout>


    </RelativeLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>

